<resources>
    <string name="app_name">Chat</string>
    <string name="share_using">Share using</string>
    <string name="today">today</string>
    <string name="you">You</string>
    <string name="not_sent">not sent</string>
    <string name="sending">sending</string>
    <string name="show_favorites">Show Favorites</string>
    <string name="no_data_found">No data found</string>
    <string name="show_all">Show All</string>
    <string name="inbox">Inbox</string>
    <string name="type_your_message">Type your message</string>
    <string name="chat">Chat</string>
    <string name="sending_message">Sending message</string>
    <string name="favorites">Favorites</string>
    <string name="all_chats">All Chats</string>
    <string name="loading">Loading</string>
    <string name="unarchive">Unarchive</string>
    <string name="moving_chat_to_archive" >Moving chat to archive</string>
    <string name="removing_chat_from_archives">Removing chat from archives</string>
    <string name="chat_archived">Chat Archived</string>
    <string name="chat_unarchived">Chat Unarchived</string>
    <string name="archived_chats">Archives</string>
    <string name="no_archived_chats">No archived chats</string>
    <string name="archive_chat">Archive</string>
    <string name="moved_to_archived_success">Moved to archive</string>
    <string name="delete">Delete</string>
    <string name="deleting_chat">Deleting Chat</string>
    <string name="confirmation">Confirmation</string>
    <string name="delete_chat_msg">Are you sure you want to delete this chat?</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="view_profile">View Profile</string>
    <string name="create_treatment_plan">Create Treatment Plan</string>
    <string name="emr">EMR</string>
    <string name="conversations">Conversations</string>
    <string name="emr_permission_denied">Unable to access EMR due to patient privacy</string>
    <string name="attachment_picker">Attachment Picker</string>
    <string name="description">Description</string>
</resources>