<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_view_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:iconTint="@android:color/white"
        android:title="@string/view_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_treatment_plan"
        android:icon="@drawable/ic_baseline_add_24"
        android:iconTint="@android:color/white"
        android:title="@string/create_treatment_plan"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_emr"
        android:icon="@drawable/ic_baseline_filter_frames_24"
        android:iconTint="@android:color/white"
        android:title="@string/emr"
        app:showAsAction="never" />


</menu>