<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <Button
        android:id="@+id/btnArchiveChats"
        style="@style/TextIconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:textAllCaps="false"
        android:visibility="gone"
        android:textColor="@color/colorPrimary"
        android:layout_marginHorizontal="@dimen/margin_normal"
        android:text="@string/archived_chats"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSurface"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin_large">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnShowFavorites"
            style="@style/TextIconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/margin_normal"
            android:paddingHorizontal="@dimen/margin_large"
            android:text="@string/show_favorites"
            android:visibility="gone"
            app:icon="@drawable/ic_baseline_favorite_border_24" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_inbox_items"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/margin_normal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_no_records"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_data_found"
                android:visibility="gone" />

        </FrameLayout>

    </LinearLayout>

</LinearLayout>